--- a/style.css
+++ b/style.css
@@ -746,6 +746,34 @@ footer {
   height: auto;
 }
 
+.side_nav{
+  width: 100%;
+  height: 41h;
+  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+ justify-content: space-between;
+  align-items: center;
+}
+
+.side_nav .navs_link{
+  width: 100%;
+  text-align: center;
+  padding: 15px;
+  background-color:rgb(235, 20, 20);
+  color: white;
+  font-size: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-bottom: 2px solid black;
+  transition: 0.5s all;
+}
+
+.side_nav .navs_link:hover{
+  background-color: white;
+  color: rgb(235, 20, 20);
+  transition: 0.5s;
+}
+
 /* section 3 */
 
 /* mobile */
